[package]
name = "eventer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6" # Add this line for CORS support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"